# rsml-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  builtins.rsml
benches/: benchmark.rs
colors/: brick.json  css.json  skin.json  tailwind.json
project/: test.model.json
src/: builtins.rs  lexer.rs  lib.rs  list.rs  macro_registry.rs  macros.rs  main.rs  range_from_span.rs  string_clip.rs  types.rs
src/compiler/: datatype.rs  mod.rs  selector.rs  tree_node.rs
src/compiler/tuple/: mod.rs
src/datatype/: colors.rs  evaluate.rs  lookup.rs  mod.rs  palette.rs  types.rs  variants.rs
src/datatype/tuple/: mod.rs
src/derives/: derives_lexer.rs  derives_parser.rs  mod.rs
src/macros/: macro_token_iterator.rs  macro_trie.rs  macros_lexer.rs  macros_parser.rs  mod.rs
src/parser/: advance.rs  datatype.rs  datatype_operations.rs  declaration.rs  mod.rs  operator.rs  parse_error.rs  rule.rs  selector.rs  tree_node.rs  types.rs  variants.rs
src/parser/datatype/: mod.rs
src/parser/datatype_group/: datatype.rs  mod.rs
src/parser/snapshots/: rbx_rsml__parser__tests__annotated_table_missing_close.snap  rbx_rsml__parser__tests__annotated_table_nested.snap  rbx_rsml__parser__tests__annotated_table_no_args.snap  rbx_rsml__parser__tests__annotated_table_udim2.snap  rbx_rsml__parser__tests__assign_property_boolean.snap  rbx_rsml__parser__tests__assign_property_missing_semicolon.snap  rbx_rsml__parser__tests__assign_property_missing_value.snap  rbx_rsml__parser__tests__assign_property_nil.snap  rbx_rsml__parser__tests__assign_property_number.snap  rbx_rsml__parser__tests__assign_property_string.snap  rbx_rsml__parser__tests__assign_static_token.snap  rbx_rsml__parser__tests__assign_static_token_missing_value.snap  rbx_rsml__parser__tests__assign_token.snap  rbx_rsml__parser__tests__assign_token_missing_semicolon.snap  (+202 more)
src/typechecker/: annotations.rs  derive.rs  macro_check.rs  mod.rs  normalize_path.rs  properties.rs  selectors.rs  tween.rs  type_error.rs
src/utils/: mod.rs  utils_lexer.rs  utils_parser.rs
test/: test.rsml
(+60 files in other folders)
