[package]
name = "rbx-rsml"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.15.1"
ropey = "1.6.1"
phf = "0.13.1"
phf_macros = "0.13.1"
once_cell = "1.21.3"
levenshtein = "1.0.5"
enum-kinds = "0.5.1"
array-concat = "0.5.5"
serde = "1.0.219"
serde_json = "1.0.143"
rangemap = "1.6.0"
indexmap = "2"
rbx_reflection = "6.1.0"
rbx_reflection_database = "2.0.2"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt"] }
